--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,17 @@
 .vs/
+ph2ed_proto/assets/
+misc/John_Modest_SH_Level_Viewer*.zip
+misc/SH_Texture_Explorer*.zip
 *.cld
 *.map
-*.map.bak
-*.map.bak.zip
-*.ilk
+*.map.bak.zip  
 ph2ed_proto/libs.obj
 ph2ed_proto/main.obj
-cld/*.obj
-cld_proto/*.obj
-*.exp
-*.lib
 *.pdb
 cld*.exe
+cld*.obj
 ph2*.exe
+ph2*.obj
 *.glsl.h
-remedybg.exe
 *.spall
-ph2ed_proto/map/*.obj
-ph2ed_proto/map/*.mtl
-ph2ed_proto/map/*.dds
+ph2ed_proto/imgui.ini
