--- a/.github/workflows/all.yaml
+++ b/.github/workflows/all.yaml
@@ -7,7 +7,28 @@ jobs:
       - uses: actions/checkout@v2
       - uses: ilammy/msvc-dev-cmd@v1
       - run: ./ci.bat
-      - uses: actions/upload-artifact@v2
+      # - uses: actions/upload-artifact@v2
+      #   with:
+      #     name: ph2ed_proto
+      #     path: ph2ed_proto/ph2ed_proto.exe
+      - run: zip --junk-paths ph2ed_proto "./ph2ed_proto/ph2ed_proto.exe"
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          name: ph2ed_proto
-          path: ph2ed_proto/ph2ed_proto.exe
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          draft: false
+          prerelease: true
+      - name: Upload Release Asset
+        id: upload-release-asset 
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+          asset_path: ./ph2ed_proto.zip
+          asset_name: ph2ed_proto.zip
+          asset_content_type: application/zip
