--- a/.github/workflows/all.yaml
+++ b/.github/workflows/all.yaml
@@ -6,12 +6,13 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: ilammy/msvc-dev-cmd@v1
-      - run: ./ci.bat
-      # - uses: actions/upload-artifact@v2
-      #   with:
-      #     name: ph2ed_proto
-      #     path: ph2ed_proto/ph2ed_proto.exe
-      - run: zip --junk-paths ph2ed_proto "./ph2ed_proto/ph2ed_proto.exe"
+      - name: CI
+        run: ./ci.bat
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: ph2ed_proto
+          path: ph2ed_proto/ph2ed_proto.exe
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -28,7 +29,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./ph2ed_proto.zip
           asset_name: ph2ed_proto.zip
           asset_content_type: application/zip
