--- a/.github/workflows/all.yaml
+++ b/.github/workflows/all.yaml
@@ -6,30 +6,17 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: ilammy/msvc-dev-cmd@v1
-      - name: CI
-        run: ./ci.bat
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v2
+      - run: ./ci.bat
+      - uses: actions/upload-artifact@v2
         with:
           name: ph2ed_proto
           path: ph2ed_proto/ph2ed_proto.exe
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # - uses: elgohr/Github-Release-Action@v4
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
+      #   with:
+      #     title: Release ${{ github.ref }}
+      - uses: softprops/action-gh-release@v1
+        # if: startsWith(github.ref, 'refs/tags/')
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          draft: false
-          prerelease: true
-      - name: Upload Release Asset
-        id: upload-release-asset 
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./ph2ed_proto.zip
-          asset_name: ph2ed_proto.zip
-          asset_content_type: application/zip
+          files: ph2ed_proto.zip
