--- a/.github/workflows/all.yaml
+++ b/.github/workflows/all.yaml
@@ -17,6 +17,6 @@ jobs:
       #   with:
       #     title: Release ${{ github.ref }}
       - uses: softprops/action-gh-release@v1
-        # if: startsWith(github.ref, 'refs/tags/')
+        if: startsWith(github.ref, 'refs/tags/')
         with:
           files: ph2ed_proto.zip
