CI: Remove if-gate

--- a/.github/workflows/all.yaml
+++ b/.github/workflows/all.yaml
@@ -11,12 +11,7 @@ jobs:
         with:
           name: ph2ed_proto
           path: ph2ed_proto/ph2ed_proto.exe
-      # - uses: elgohr/Github-Release-Action@v4
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
-      #   with:
-      #     title: Release ${{ github.ref }}
       - uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
+        # if: startsWith(github.ref, 'refs/tags/')
         with:
           files: ph2ed_proto.zip
