--- a/.github/workflows/all.yaml
+++ b/.github/workflows/all.yaml
@@ -12,6 +12,10 @@ jobs:
           name: ph2ed_proto
           path: ph2ed_proto/ph2ed_proto.exe
       - uses: softprops/action-gh-release@v1
-        # if: startsWith(github.ref, 'refs/tags/')
+        if: startsWith(github.ref, 'refs/tags/')
         with:
           files: ph2ed_proto.zip
+      - uses: meeDamian/github-release@2.0
+        with:
+          token: ${{ secrets.RELEASE_TOKEN }}
+          files: ph2ed_proto.zip:ph2ed_proto/ph2ed_proto.exe
