--- a/.github/workflows/all.yaml
+++ b/.github/workflows/all.yaml
@@ -11,11 +11,10 @@ jobs:
         with:
           name: ph2ed_proto
           path: ph2ed_proto/ph2ed_proto.exe
-      - uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
+      - uses: "marvinpinto/action-automatic-releases@latest"
         with:
+          repo_token: "${{ secrets.RELEASE_TOKEN }}"
+          automatic_release_tag: "latest"
+          prerelease: true
+          title: "Latest"
           files: ph2ed_proto.zip
-      - uses: meeDamian/github-release@2.0
-        with:
-          token: ${{ secrets.RELEASE_TOKEN }}
-          files: ph2ed_proto.zip:ph2ed_proto/ph2ed_proto.exe
